fix spelling mistakes

--- a/SeminarThesis/thesis.tex
+++ b/SeminarThesis/thesis.tex
@@ -160,7 +160,7 @@ form basis for threshold calculation are summarized in \cref{tab:parameters}.
     Vehicular mobility      & This is the most common parameter used in the algorithms. Mobility of the vehicles are measured in terms of
     relative velocity and average velocity over time of the vehicle                                                                                \\
     Direction of the travel & In many cases, information to be shared between vehicles only has relevance if the vehicles share the same path
-    and direction. This knowledge cab be used by the algorithms for forming trajectory tables or assigning Road IDs
+    and direction. This knowledge can be used by the algorithms for forming trajectory tables or assigning Road IDs
     to compare directions and route                                                                                                                \\
     Destination             & Used by applications which give importance to route taken by the vehicles to provide longer stable cluster            \\
     Density                 & Mostly used to differentiate sparse and dense networks and define different communication model to ensure reliable
