some more changes done

--- a/SeminarThesis/thesis.tex
+++ b/SeminarThesis/thesis.tex
@@ -253,10 +253,10 @@ between the vehicles to share real-time information.
 
 \subsection{Multi-hop clustering}
 
-The methodologies summarized till now in this section relies on one hop communication i.e. direct communication between
+The methodologies summarized till now, relies on one hop communication i.e. direct communication between
 the \ac{CH} and the \ac{CM}. The one hop based communication clusters face the problem of frequent handoffs between
 the clusters for members with high mobility. Multi-hop clustering methods try to address this issue by including N-hop
-members to the cluster. As shown in \ref{fig:2hop} and \ref{fig:3hop}, the multi-hop members communicate to the \ac{CH}
+members to the cluster. As shown in \cref{fig:2hop} and \cref{fig:3hop}, the multi-hop members communicate to the \ac{CH}
 via the intermediate members and can be located a maximum of N-hop distance away from the \ac{CH}. In a multi-hop
 clustering methodology, the \texttt{HELLO} messages contain additionally the number of current hops and are re-broadcasted
 by a node after adding themselves as an intermediate node. This forms the basis for identifying routes to the N-hop nodes
